<resources>
    <string name="app_name">Beatus</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="menu_item_call">Call</string>
    <string name="menu_item_text">Text</string>
    <string name="menu_item_email">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="image_of_the_recipe">Image of the recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="nutrition">Nutrition</string>
    <string name="new_recipe">"Add New Recipe"</string>
    <string name="food_image">Food Image</string>
    <string name="logo">Logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="saved_recipes">Saved Recipes</string>
    <string name="shopping_list">Shopping List</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="beatus_recipe">Beatus Recipe</string>
    <string name="beatus_gmail_co_ke">beatus@gmail.co.ke</string>
    <string name="nav_header_icon">Nav header icon</string>
    <string name="add_field">Add Field</string>
    <string name="remove">Remove</string>
    <string name="steps">Steps</string>
    <string name="step_s">Step(s)</string>
    <string name="ingredient_s">Ingredient(s)</string>
    <string name="measure">Measurements</string>
    <string name="search">Search...</string>
    <string name="shopping">You have been asked to create a PowerPoint presentation on a training method for executives at American Express Global Travel Company. Use the adult learning training method to complete this presentation

In your PowerPoint presentation, include the following points:
1.Explanation of the training method;
2. How your organization can implement it;
3. The benefits of this method;
4. The potential barriers to this method and how you can overcome them;
5. How you will present this information (in a traditional format, computer-based,
e-learning model, or a combination),
6. An explanation of that method, and the reasons why; and
any additional information you feel may be helpful.

Your presentation must be at least 10 slides in length, not including the title and reference slides. You are required to use  the notes section. Within the notes section, include additional explanations. As  you write your presentation, keep in mind that you are presenting for executives at your organization. All sources used, must be cited and referenced according to APA guidelines
</string>
    <string name="delete">DELETE</string>
    <string name="food_name">Food Name</string>
    <string name="category">Category</string>
    <string name="update">UPDATE</string>

</resources>
