<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frame_layout"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@drawable/relative_background"
        android:padding="8dp">

        <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/delete_icon"
            android:text="@string/delete"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/update_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_update" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/update_icon"
            android:text="@string/update"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="13sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/view_foreground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/food_image"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="8dp"
                    android:background="@color/colorPrimaryLight"
                    android:contentDescription="TODO"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cake" />

                <TextView
                    android:id="@+id/food_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/food_image"
                    android:ellipsize="end"
                    android:fontFamily="san-serif-medium"
                    android:maxLines="1"
                    android:paddingEnd="8dp"
                    android:text="@string/food_name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/food_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/food_name"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_toEndOf="@id/food_image"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingEnd="8dp"
                    android:text="@string/category"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/food_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/food_category"
                    android:layout_marginTop="4dp"
                    android:layout_toEndOf="@id/food_image"
                    android:ellipsize="end"
                    android:maxLines="4"
                    android:paddingEnd="8dp"
                    android:text="Description"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12sp" />

                <!--<Button
                    android:id="@+id/btn_restore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_toEndOf="@id/food_image"
                    android:text="Restore"/>-->



            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>


</FrameLayout>
